<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/globalContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Leonov.NoActionBar"
    tools:context=".ui.ResultFragment">

    <View
        android:id="@+id/toolbarView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbarSpacer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/toolbarCrossButton"
        style="@style/image_toolbar_left"
        android:src="@drawable/ic_cross"
        app:layout_constraintStart_toStartOf="@id/toolbarView"
        app:layout_constraintTop_toTopOf="@id/toolbarView" />

    <Space
        android:id="@+id/toolbarSpacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_margin"
        app:layout_constraintTop_toBottomOf="@id/toolbarCrossButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/successContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/toBranchesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_success" />

            <TextView
                style="@style/text_headline_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center_horizontal"
                android:text="@string/result_screen_success_title" />

            <TextView
                style="@style/text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:gravity="center_horizontal"
                android:text="@string/result_screen_success_hint" />
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/toBranchesButton"
            style="@style/button_yellow"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/result_screen_success_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/faultContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/toHomeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_some_error" />

            <TextView
                style="@style/text_headline_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:gravity="center_horizontal"
                android:text="@string/result_screen_error_title" />

            <TextView
                style="@style/text_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:gravity="center_horizontal"
                android:text="@string/result_screen_error_hint" />
        </LinearLayout>

        <android.widget.Button
            android:id="@+id/toHomeButton"
            style="@style/button_yellow"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/result_screen_error_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>